Added breakable component to break blocks and functionality for Oculus

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         rotation="-90 0 0"
         material="shader: flat; src: #grassBlockTop; repeat: 500 500"></a-entity>
 
-      <a-entity isblock="srcTop: #grassBlockTop; srcBottom: #dirt; srcSides: #grassBlockSide" position="0 0 -2"></a-entity>
+      <a-entity breakable isblock="srcTop: #grassBlockTop; srcBottom: #dirt; srcSides: #grassBlockSide" position="0 0 -2"></a-entity>
 
     </a-scene>
   </body>
