--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://cdn.rawgit.com/elbobo/aframe-multisrc-component/b6d23310/dist/0.3/aframe-multisrc-component.js"></script>
     <!-- Teleportation -->
     <script src="https://unpkg.com/aframe-teleport-controls/dist/aframe-teleport-controls.min.js"></script>
+    <!-- Controller Cursor -->
+    <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>
     <!-- Custom Scripts -->
     <script src="./scripts.js"></script>
   </head>
@@ -32,14 +34,13 @@
       </a-assets>
 
       <!-- Player -->
-      <a-entity id="cameraRig" position="0 1.5 0">
-        <a-entity id="head" camera wasd-controls="acceleration: 250" look-controls>
+      <a-entity id="cameraRig">
+        <a-entity id="head" position="0 1.5 0" camera wasd-controls="acceleration: 250" look-controls>
           <a-cursor blockmanipulator></a-cursor>
+        </a-entity>
           <a-entity id="leftHand" oculus-touch-controls="hand: left"
               teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
-          <a-entity id="rightHand" oculus-touch-controls="hand: right"
-              controller-cursor></a-entity>
-        </a-entity>
+          <a-entity id="rightHand" oculus-touch-controls="hand: right" controller-cursor blockmanipulator></a-entity>
       </a-entity>
 
       <!--Sky-->
