--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>A-Frame Minecraft</title>
     <meta name="description" content="Welcome to a VR tour of Loveland High School!">
     <!-- A-Frame -->
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <!-- Multi Source -->
     <!-- srcs: right, left, top, bottom, front, back -->
     <script src="https://cdn.rawgit.com/elbobo/aframe-multisrc-component/b6d23310/dist/0.3/aframe-multisrc-component.js"></script>
@@ -35,18 +35,17 @@
 
       <!-- Player -->
       <a-entity id="cameraRig">
-        <a-entity id="head" position="0 1.5 0" camera wasd-controls="acceleration: 250" look-controls>
+        <a-entity id="head" position="0 1.5 0" camera wasd-controls look-controls>
         </a-entity>
           <a-entity id="leftHand" oculus-touch-controls="hand: left"
               teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
-          <a-entity id="rightHand" oculus-touch-controls="hand: right" raycaster="showLine: true; useWorldCoordinates: true; objects: .collidable; far: 15" blockmanipulator></a-entity>
+          <a-entity id="rightHand" oculus-touch-controls="hand: right"></a-entity>
       </a-entity>
 
       <!--Sky-->
       <a-sky color="#87ceeb"></a-sky>
       <!--Floor-->
-      <a-entity class="collidable"
-        geometry="primitive: plane; height: 500; width: 500"
+      <a-entity geometry="primitive: plane; height: 500; width: 500"
         position=".5 -.5 0"
         rotation="-90 0 0"
         material="shader: flat; src: #grassBlockTop; repeat: 500 500"></a-entity>
