--- a/test.html
+++ b/test.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<!-- npm install -g live-server && live-server -->
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>A-Frame Minecraft</title>
-    <meta name="description" content="Welcome to a VR tour of Loveland High School!">
-    <!-- A-Frame -->
-    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
-    <!-- Multi Source -->
-    <!-- srcs: right, left, top, bottom, front, back -->
-    <script src="https://cdn.rawgit.com/elbobo/aframe-multisrc-component/b6d23310/dist/0.3/aframe-multisrc-component.js"></script>
-    <!-- Teleportation -->
-    <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
-    <!-- Controller Cursor -->
-    <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.7/dist/aframe-controller-cursor-component.min.js"></script>
-    <!-- Custom Scripts -->
-    <script src="./scripts.js"></script>
+    <title>TestCraft</title>
+    <meta name="description" content="Aincraft">
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-teleport-controls@0.2.0/dist/aframe-teleport-controls.min.js"></script>
+    <script src="https://unpkg.com/aframe-controller-cursor-component@0.2.2/dist/aframe-controller-cursor-component.min.js"></script>
+    <script src="https://rawgit.com/ngokevin/aframe-motion-capture/343f99/dist/aframe-motion-capture.min.js"></script>
+    <script src="components/intersection-spawn.js"></script>
+    <script src="components/random-color.js"></script>
+    <script src="components/snap.js"></script>
   </head>
   <body>
-    <a-scene fog="type: linear; color: #90b7ee; far: 220; near: 0;">
+    <a-scene>
       <a-assets>
         <img id="bedrock" src="./textures/bedrock block.png">
         <img id="cobblestone" src="./textures/cobblestone block.png">
@@ -33,25 +28,33 @@
         <img id="woodenPlank" src="./textures/wooden plank block.png">
       </a-assets>
 
-      <!-- Player -->
-      <a-entity id="cameraRig">
-        <a-entity id="head" position="0 1.5 0" camera wasd-controls look-controls>
-        </a-entity>
-          <a-entity id="leftHand" oculus-touch-controls="hand: left"
-              teleport-controls="cameraRig: #cameraRig; teleportOrigin: #head;"></a-entity>
-          <a-entity id="rightHand" oculus-touch-controls="hand: right"></a-entity>
-      </a-entity>
-
       <!--Sky-->
       <a-sky color="#87ceeb"></a-sky>
       <!--Floor-->
-      <a-entity geometry="primitive: plane; height: 500; width: 500"
+      <a-entity class="collidable"
+        geometry="primitive: plane; height: 500; width: 500"
         position=".5 -.5 0"
         rotation="-90 0 0"
         material="shader: flat; src: #grassBlockTop; repeat: 500 500"></a-entity>
 
-      <a-entity breakable isblock="srcTop: #grassBlockTop; srcBottom: #dirt; srcSides: #grassBlockSide" position="0 0 -2"></a-entity>
+      <!-- Hands. -->
+      <a-entity id="teleHand"
+        hand-controls="left"
+        teleport-controls="type: parabolic; collisionEntities: [mixin='voxel'], #ground"
+      ></a-entity>
 
+      <a-entity id="blockHand"
+        hand-controls="right"
+        controller-cursor
+        intersection-spawn="event: click; mixin: voxel"
+      ></a-entity>
+
+      <!-- Camera. -->
+      <a-camera>
+        <a-cursor
+          intersection-spawn="event: click; mixin: voxel"
+        ></a-cursor>
+      </a-camera>
     </a-scene>
   </body>
 </html>
